P1.0.0 Angular6Firebase AddCursos y maqueta cursos para mostrar lista de cursos

--- a/src/app/components/cursos/cursos.component.html
+++ b/src/app/components/cursos/cursos.component.html
@@ -1,3 +1,38 @@
-<p>
-  cursos works!
-</p>
+<ul class="collection with-header">
+    <li class="collection-header"><h5>Cursos</h5></li>
+    <li class="collection-item">
+        <a href="#!" class="secondary-content">
+          <i class="material-icons">mode_edit</i>
+          <i class="material-icons">close</i>
+        </a>
+        <strong>Nombre del Curso</strong>
+        <br>
+        <blockquote>Descripción del curso</blockquote>
+        <br>
+        <span class="my_tag amber">
+          <strong>Precio:</strong>
+          11.75€
+        </span>
+
+        <span class="my_tag amber">
+          <strong>Idioma:</strong>
+          Español
+        </span>
+
+        <span class="my_tag amber">
+          <strong>Formador:</strong>
+          Yo Mismo
+        </span>
+
+        <span class="my_tag amber">
+          <strong>Lenguaje:</strong>
+          PHP
+        </span>
+
+        <hr>
+
+        <div class="container-updateCurso">
+          <!--Formulario de edicion-->
+        </div>
+    </li>
+  </ul>
