--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,3 +1,5 @@
-<p>
-  navbar works!
-</p>
+<nav>
+  <div class="nav-wrapper light-blue darken-4">
+    <a href="#" class="brand-logo center">Angular 6 & Firebase</a>
+  </div>
+</nav>
