--- a/src/app/components/add-cursos/add-cursos.component.html
+++ b/src/app/components/add-cursos/add-cursos.component.html
@@ -1,3 +1,49 @@
-<p>
-  add-cursos works!
-</p>
+      <div class="card darken-3">
+        <div class="card-content white-text">
+            <span class="card-title">Nuevo Curso</span>
+              <form  (ngSubmit)="onGuardarCurso(formNew)" #formNew="ngForm" class="row">
+                <div class="col s12">
+
+                    <div class="input-field col s6">
+                        <input id="name" [(ngModel)]="curso.nombre" #nombre="ngModel" type="text" name="nombre" class="validate">
+                        <label for="name">Curso</label>
+                    </div>
+
+                    <div class="input-field col s6">
+                        <input id="description" [(ngModel)]="curso.descripcion" #descripcion="ngModel" type="text" name="descripcion" class="validate">
+                        <label for="description">Descripción</label>
+                    </div>
+
+                    <div class="input-field col s6">
+                        <input id="trainer"  [(ngModel)]="curso.formador" #formador="ngModel" type="text" name="formador" class="validate">
+                        <label for="trainer">Formador</label>
+                    </div>
+
+                    <div class="input-field col s6">
+                        <input id="language"  [(ngModel)]="curso.idioma" #idioma="ngModel" type="text" name="idioma" class="validate">
+                        <label for="language">Idioma</label>
+                    </div>
+
+                    <div class="input-field col s6">
+                        <input id="price"  [(ngModel)]="curso.precio" #precio="ngModel"  type="text" name="precio" class="validate">
+                        <label for="price">Precio</label>
+                    </div>
+
+                    <div class="input-field col s6">
+                        <input id="Technology"  [(ngModel)]="curso.tecnologia" #tecnologia="ngModel" type="text" name="tecnologia" class="validate" class="flow-text">
+                        <label for="Technology">Tecnología</label>
+                    </div>
+
+                    <div class="col s12 left">
+                        <button class="btn waves-effect green accent-4" type="submit" name="action">Guardar
+                            <i class="material-icons right">add_circle_outline</i>
+                        </button>
+                    </div>
+
+                    </div>
+                </form>
+            </div>
+        </div>
+
+
+
