--- a/src/app/components/cursos/cursos.component.css
+++ b/src/app/components/cursos/cursos.component.css
@@ -4,4 +4,9 @@
     padding: 0.5rem;
     text-align: center;
     box-sizing: border-box;
+    display: inline-block;
+}
+
+a.secondary-content {
+  cursor: pointer;
 }
