--- a/src/app/components/add-cursos/add-cursos.component.html
+++ b/src/app/components/add-cursos/add-cursos.component.html
@@ -5,35 +5,35 @@
       <div class="col s12">
 
         <div class="input-field col s6">
-          <input id="name" [(ngModel)]="curso.nombre" #nombre="ngModel" type="text" name="nombre" class="validate">
-          <label for="name">Curso</label>
+          <input id="name" [(ngModel)]="curso.nombre" #nombre="ngModel" type="text" name="nombre" placeholder="Ingrese nombre" class="validate">
+          <label class="active" for="name">Curso</label>
         </div>
 
         <div class="input-field col s6">
-          <input id="description" [(ngModel)]="curso.descripcion" #descripcion="ngModel" type="text" name="descripcion"
+          <input id="description" [(ngModel)]="curso.descripcion" #descripcion="ngModel" type="text"  placeholder="Ingrese descripcion" name="descripcion"
             class="validate">
-          <label for="description">Descripción</label>
+          <label class="active"for="description">Descripción</label>
         </div>
 
         <div class="input-field col s6">
-          <input id="trainer" [(ngModel)]="curso.formador" #formador="ngModel" type="text" name="formador" class="validate">
-          <label for="trainer">Formador</label>
+          <input id="trainer" [(ngModel)]="curso.formador" #formador="ngModel" type="text" name="formador"  placeholder="Ingrese formador" class="validate">
+          <label class="active"for="trainer">Formador</label>
         </div>
 
         <div class="input-field col s6">
-          <input id="language" [(ngModel)]="curso.idioma" #idioma="ngModel" type="text" name="idioma" class="validate">
-          <label for="language">Idioma</label>
+          <input id="language" [(ngModel)]="curso.idioma" #idioma="ngModel" type="text" name="idioma"  placeholder="Ingrese idioma" class="validate">
+          <label class="active"for="language">Idioma</label>
         </div>
 
         <div class="input-field col s6">
-          <input id="price" [(ngModel)]="curso.precio" #precio="ngModel" type="text" name="precio" class="validate">
-          <label for="price">Precio</label>
+          <input id="price" [(ngModel)]="curso.precio" #precio="ngModel" type="text" name="precio"  placeholder="Ingrese precio" class="validate">
+          <label class="active"for="price">Precio</label>
         </div>
 
         <div class="input-field col s6">
-          <input id="Technology" [(ngModel)]="curso.tecnologia" #tecnologia="ngModel" type="text" name="tecnologia"
+          <input id="Technology" [(ngModel)]="curso.tecnologia" #tecnologia="ngModel" type="text"  placeholder="Ingrese tecnologia" name="tecnologia"
             class="validate" class="flow-text">
-          <label for="Technology">Tecnología</label>
+          <label class="active" for="Technology">Tecnología</label>
         </div>
 
         <div class="col s12 left">
