--- a/src/app/components/add-cursos/add-cursos.component.html
+++ b/src/app/components/add-cursos/add-cursos.component.html
@@ -72,5 +72,8 @@
 </div>
 
 <div>
-   <h1> {{ $message }}</h1>
+  <!-- <button type="button" (click)="Error()"> Error </button>
+  <button type="button" (click)="Success()"> Success </button>
+  <button type="button" (click)="Warning()"> Warning </button>
+  <button type="button" (click)="Info()"> Info </button> -->
 </div>
